--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>dev.java4now</groupId>
     <artifactId>CyclePower_Mob</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.2-ALPHA</version>
     <packaging>jar</packaging>
 
     <name>CyclePower_Mob</name>
